Fixed BocList Inline Editing: required width increases when a validation marker is shown in front of an inline editing input element, causing scrollbars to show up. (RM-4687)
git-svn-id: https://svn.re-motion.org/svn/Remotion/trunk@29295 cb0deee2-328e-b949-94ea-fb3139fab790

--- a/Remotion/ObjectBinding/Web.Legacy/Res/HTML/BocList.css
+++ b/Remotion/ObjectBinding/Web.Legacy/Res/HTML/BocList.css
@@ -246,3 +246,29 @@ span.contentMenuItemDisabled a
   color: gray;
 	cursor: default;
 }
+
+span.bocListEditableCell
+{
+  display: inline-block;
+  width: 100%
+}
+
+span.bocListEditableCell .validationErrorMarker
+{
+  vertical-align: middle;
+  float: left;
+  margin-left: -9px;
+  position: absolute;
+}
+
+span.bocListEditableCell .control
+{
+  width: 100%; 
+  display: block;
+}
+
+span.bocListEditableCell .control > *
+{
+  width: 100%;
+  vertical-align: middle;
+}
