--- a/Remotion/ObjectBinding/Web/Res/Themes/NovaBlue/Html/BocList.css
+++ b/Remotion/ObjectBinding/Web/Res/Themes/NovaBlue/Html/BocList.css
@@ -398,3 +398,45 @@ div.bocListEditModeValidationMessage
   color: Red;
 }
 
+span.bocListEditableCell
+{
+  display: inline-block;
+  width: 100%
+}
+
+span.bocListEditableCell .validationErrorMarker
+{
+  vertical-align: middle;
+  float: left;
+}
+
+span.bocListEditableCell .control
+{
+  width: 100%; 
+  display: block;
+}
+
+span.bocListEditableCell .validationErrorMarker + .control
+{
+  padding-left: 14px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+span.bocListEditableCell .control > *
+{
+  width: 100%;
+  vertical-align: middle;
+}
+
+body.msie7 span.bocListEditableCell .validationErrorMarker
+{
+  margin-left: -9px;
+  position: absolute;
+}
+
+body.msie7 span.bocListEditableCell .validationErrorMarker + .control
+{
+  padding-left: 0px;
+}
